[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.10.14"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
openai = "^0.27.6"
Flask-WTF = "^1.1.1"
WTForms = "^3.0.1"
twilio = "^8.2.2"
flask-sqlalchemy = "^3.0.3"
langchain = "^0.0.193"
flask-migrate = "^4.0.4"
python-dotenv = "^1.0.0"
gunicorn = "^20.1.0"
toml = "^0.10.2"
psycopg2-binary = "^2.9.6"
segment-analytics-python = "^2.2.3"
flask-sslify = "^0.1.5"
flask-cors = "^4.0.0"
flask-apscheduler = "^1.12.4"
requests = "^2.31.0"
flask-sockets = "^0.2.1"
flask-socketio = "^5.3.4"
gevent-websocket = "^0.10.1"
tiktoken = "^0.5.1"
pinecone-client = "^2.2.4"
celery = "^5.3.4"
redis = "^5.0.1"
sendgrid = "^6.11.0"
redlock = "^1.2.0"
pandas = "^2.2.2"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
